src/components/snapshots/vault_tasks__components__filter_tab__tests__filter_tab_search-2.snap
---
source: src/components/filter_tab.rs
expression: terminal.backend()
info: Empty field
---
"                                                                                "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Found Tags───┐┌✅ Gather ingredients (Serves 4):──────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│bookshelf    ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│cooking      ││#cooking                                                       │"
"│study        ││┌✅ 1 cup unsalted butter─────────────────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│tag          │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│tag1         │││#toBuy                                                       ││"
"│tag2         ││└─────────────────────────────────────────────────────────────┘│"
"│toBuy        ││┌✅ 8 oz bittersweet chocolate, chopped───────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│workout      │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ 6 large eggs──────────────────────────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ 3 egg yolks───────────────────────────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ 1 cup sugar───────────────────────────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ 1 tbsp vanilla extract────────────────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ 1 cup all-purpose flour───────────────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ Confectioners' sugar, for dusting─────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 1 cup unsalted butter───────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 8 oz bittersweet chocolate, chopped─────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 6 large eggs────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 3 egg yolks─────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 1 cup sugar─────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 1 tbsp vanilla extract──────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 1 cup all-purpose flour─────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ Confectioners' sugar, for dusting───────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ Melt butter and chocolate:──────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/30                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#cooking                                                       │"
"│             ││┌✅ In a microwave or double boiler, melt butter and chocolate┐│" Hidden by multi-width symbols: [(18, " ")]
"│             │││📅 2024/09/30                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ Preheat the oven to 425°F (220°C). Grease four ramekins wi┐│" Hidden by multi-width symbols: [(18, " ")]
"│             │││📅 2024/09/30                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ In a microwave or double boiler, melt butter and chocolate t┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/30                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ Preheat the oven to 425°F (220°C). Grease four ramekins with┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/30                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌❌ Whisk eggs, yolks, sugar, and vanilla:──────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/30                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#cooking                                                       │"
"│             ││┌✅ In a large mixing bowl, whisk together eggs, egg yolks, su┐│" Hidden by multi-width symbols: [(18, " ")]
"│             │││📅 2024/09/30                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ Gradually fold in the cooled chocolate mixture.───────────┐│" Hidden by multi-width symbols: [(18, " ")]
"│             │││📅 2024/09/30                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             ││└─────────────────────────────────────────────────────────────┘│"
"└─────────────┘│┌❌ Sift in flour and gently fold it into the batter until jus┐│" Hidden by multi-width symbols: [(18, " ")]
"                         Press Enter to stop searching                          "
"                                                                                "
