src/components/snapshots/vault_tasks__components__filter_tab__tests__filter_tab_search-3.snap
---
source: src/components/filter_tab.rs
expression: terminal.backend()
info: Searching for 2021/09/29
---
"                                                                                "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│2024/09/29                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Found Tags───┐┌✅ Gather ingredients (Serves 4):──────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│bookshelf    ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│cooking      ││#cooking                                                       │"
"│study        ││┌✅ 1 cup unsalted butter─────────────────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│tag          │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│tag1         │││#toBuy                                                       ││"
"│tag2         ││└─────────────────────────────────────────────────────────────┘│"
"│toBuy        ││┌✅ 8 oz bittersweet chocolate, chopped───────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│workout      │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ 6 large eggs──────────────────────────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ 3 egg yolks───────────────────────────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ 1 cup sugar───────────────────────────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ 1 tbsp vanilla extract────────────────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ 1 cup all-purpose flour───────────────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ Confectioners' sugar, for dusting─────────────────────────┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             │││#toBuy                                                       ││"
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 1 cup unsalted butter───────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 8 oz bittersweet chocolate, chopped─────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 6 large eggs────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 3 egg yolks─────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 1 cup sugar─────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 1 tbsp vanilla extract──────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 1 cup all-purpose flour─────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ Confectioners' sugar, for dusting───────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ Gather materials (Textbooks, notes, laptop)─────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#study                                                         │"
"│             ││┌✅ Review key concepts and vocabulary (90 minutes)───────────┐│" Hidden by multi-width symbols: [(18, " ")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ Short stories by William Faulkner─────────────────────────┐│" Hidden by multi-width symbols: [(18, " ")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ Themes and symbols in the novels "The Great Gatsby" and "T┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             ││┌✅ Literary devices such as foreshadowing, irony, and imagery┐│" Hidden by multi-width symbols: [(18, "─")]
"│             │││📅 2024/09/29                                                ││" Hidden by multi-width symbols: [(18, " ")]
"│             ││└─────────────────────────────────────────────────────────────┘│"
"│             │└──────────────────────────────────────────────────study_plan.md┘"
"│             │┌✅ Review key concepts and vocabulary (90 minutes)─────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             │└──────────────────────────────────────────────────study_plan.md┘"
"│             │┌✅Short stories by William Faulkner───────────────────────────┐" Hidden by multi-width symbols: [(17, "✅"), (18, " ")]
"│             ││📅2024/09/29                                                  │" Hidden by multi-width symbols: [(17, "📅"), (18, " ")]
"│             │└──────────────────────────────────────────────────study_plan.md┘"
"│             │┌✅Themes and symbols in the novels "The Great Gatsby" and "To ┐" Hidden by multi-width symbols: [(17, "✅"), (18, " ")]
"│             ││📅2024/09/29                                                  │" Hidden by multi-width symbols: [(17, "📅"), (18, " ")]
"│             │└──────────────────────────────────────────────────study_plan.md┘"
"└─────────────┘┌✅Literary devices such as foreshadowing, irony, and imagery──┐" Hidden by multi-width symbols: [(17, "❌"), (18, " ")]
"                         Press Enter to stop searching                          "
"                                                                                "
