src/components/snapshots/vault_tasks__components__filter_tab__tests__filter_tab_search.snap
---
source: src/components/filter_tab.rs
expression: terminal.backend()
---
"                                                                                "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│#tobuy                                                                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Found Tags───┐┌✅ 1 cup unsalted butter───────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│toBuy        ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 8 oz bittersweet chocolate, chopped─────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 6 large eggs────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 3 egg yolks─────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 1 cup sugar─────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 1 tbsp vanilla extract──────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ 1 cup all-purpose flour─────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ Confectioners' sugar, for dusting───────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/29                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└─────────────────────────────────────────chocolate_lava_cake.md┘"
"│             │┌✅ Pine boards (2 @ 1x6, 4 @ 1x2, 4 @ 1x4)─────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/30                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└───────────────────────────────────────────────diy_bookshelf.md┘"
"│             │┌✅ Wood screws (1.5 inch)──────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/30                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└───────────────────────────────────────────────diy_bookshelf.md┘"
"│             │┌✅ Sandpaper (grit 120)────────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/30                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└───────────────────────────────────────────────diy_bookshelf.md┘"
"│             │┌✅ Paint or stain of choice────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " ")]
"│             ││📅 2024/09/30                                                  │" Hidden by multi-width symbols: [(17, " ")]
"│             ││#toBuy                                                         │"
"│             │└───────────────────────────────────────────────diy_bookshelf.md┘"
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"│             │                                                                 "
"└─────────────┘                                                                 "
"                         Press Enter to stop searching                          "
"                                                                                "
